# synaptic

./: .clang-format  .git-blame-ignore-revs  .gitignore  AUTHORS  BUGS  ChangeLog  Contributing.md  DEBUG  FAQ  INSTALL  Makefile.am  NEWS  README  README.debtags  README.md  README.qt  README.scripting  README.tasks  TEST  TODO  TRANSLATORS  acconfig.h  acinclude.m4  autogen.sh  config.h.in  configure.ac  configure.in  fmt  meson.build  meson_options.txt  mkinstalldirs  pre-build.sh  synaptic-redhat.spec  synaptic-suse.spec  synaptic.spec  xmldocs.make
common/: Makefile.am  conversion.cc  conversion.h  coroutines.h  i18n.h  indexcopy.cc  indexcopy.h  meson.build  pkg_acqfile.cc  pkg_acqfile.h  raptoptions.cc  raptoptions.h  rcacheactor.cc  rcacheactor.h  rcdscanner.cc  rcdscanner.h  rconfiguration.cc  rconfiguration.h  rdeb822source.cc  rdeb822source.h  rdependency.h  rinstallprogress.cc  rinstallprogress.h  rpackage.cc  rpackage.h  rpackagecache.cc  rpackagecache.h  rpackagefilter.cc  rpackagefilter.h  rpackagelistactor.cc  rpackagelistactor.h  rpackagelister.cc  rpackagelister.h  rpackagemanager.cc  rpackagemanager.h  rpackagestatus.cc  rpackagestatus.h  rpackageview.cc  rpackageview.h  rpmindexcopy.cc  (+18 more)
data/: Makefile.am  com.ubuntu.pkexec.synaptic.policy.in  io.github.mvo5.synaptic.metainfo.xml  io.github.mvo5.synaptic.metainfo.xml.in  meson.build  synaptic-kde.desktop.in  synaptic.desktop  synaptic.desktop.in
gtk/: Makefile.am  dialog_change_version.glade  dialog_changelog.glade  dialog_conffile.glade  dialog_details.glade  dialog_disc_label.glade  dialog_disc_name.glade  dialog_download_error.glade  dialog_downloading.glade  dialog_error_cachelimit.glade  dialog_example.glade  dialog_executing.glade  dialog_iconlegend.glade  dialog_locales_warning.glade  dialog_locales_warning.glade.strings  dialog_locales_warning.gladep  dialog_new_repositroy.glade  dialog_proposed2_download.glade  dialog_proposed2_executing.glade  dialog_proposed_download.glade  dialog_quit.glade  dialog_quit.glade.strings  dialog_quit.gladep  dialog_summary.glade  dialog_task_descr.glade  dialog_unmet.glade  dialog_update_failed.glade  dialog_update_outdated.glade  dialog_upgrade.glade  dialog_upgrade.glade.strings  dialog_upgrade.gladep  dialog_welcome.glade  druid_repository.glade  galertpanel.c  galertpanel.h  gsynaptic.cc  gsynaptic.h  gtk3compat.h  gtkpkglist.cc  gtkpkglist.h  (+143 more)
gtk/glade/: Makefile.am  dialog_authentication.glade  dialog_change_version.glade  dialog_changelog.glade  dialog_columns.glade  dialog_conffile.glade  dialog_disc_label.glade  dialog_download_error.glade  dialog_proposed_new_repositories.glade  dialog_quit.glade  dialog_update_failed.glade  dialog_update_outdated.glade  dialog_upgrade.glade  dialog_welcome.glade  window_about.glade  window_changes.glade  window_details.glade  window_fetch.glade  window_filters.glade  window_iconlegend.glade  window_logview.glade  window_main.glade  window_preferences.glade  window_procceed.glade  window_repositories.glade  window_rginstall_progress_msgs.glade  window_setopt.glade  window_summary.glade  window_tasks.glade
gtk/gtkbuilder/: Makefile.am  dialog_admin_privileges.ui  dialog_authentication.ui  dialog_change_version.ui  dialog_changelog.ui  dialog_columns.ui  dialog_conffile.ui  dialog_disc_label.ui  dialog_download_error.ui  dialog_example.ui  dialog_new_repositroy.ui  dialog_proposed_new_repositories.ui  dialog_quit.ui  dialog_task_descr.ui  dialog_unmet.ui  dialog_update_failed.ui  dialog_update_outdated.ui  dialog_upgrade.ui  dialog_welcome.ui  druid_repository.ui  meson.build  synaptic.gresource.xml  window_about.ui  window_changes.ui  window_details.ui  window_disc_name.ui  window_fetch.ui  window_filters.ui  window_find.ui  window_iconlegend.ui  window_install_progress.ui  window_logview.ui  window_main.ui  window_preferences.ui  window_procceed.ui  window_repositories.ui  window_rgdebinstall_progress.ui  window_rginstall_progress.ui  window_rginstall_progress_msgs.ui  window_setopt.ui  (+3 more)
help/: Makefile.am  meson.build
help/C/: ChangeLog  Makefile.am  gpl.xml  synaptic-C.omf  synaptic.xml
help/hr/: gpl.xml  (+5 more)
pixmaps/: Makefile.am  alert.xpm  brokenM.xpm  cdrom.xpm  cnc.xpm  cnc2.xpm  deb.xpm  distupgrade.xpm  distupgrade_small.xpm  down.xpm  downgradeM.xpm  filter.xpm  find.xpm  fixbroken.xpm  heldM.xpm  holdM.xpm  installM.xpm  keepM.xpm  logo.xpm  meson.build  newM.xpm  options.xpm  pref_hpaned.xpm  pref_vpaned.xpm  proceed.xpm  proceed_small.xpm  removeM.xpm  sources.xpm  stop.xpm  synaptic.xpm  synaptic_mini.xpm  up.xpm  update.xpm  update_small.xpm  upgrade-old.xpm  upgradeM.xpm  upgrade_small.xpm
qt/: Makefile.am  qsynaptic.cc  rqcacheprogress.cc  rqcacheprogress.h  rqchangeswindow.cc  rqchangeswindow.h  rqchangeswindow.moc.cc  rqfetchitem.cc  rqfetchitem.h  rqfetchwindow.cc  rqfetchwindow.h  rqfetchwindow.moc.cc  rqfilterswindow.cc  rqfilterswindow.h  rqinstallwindow.cc  rqinstallwindow.h  rqinstallwindow.moc.cc  rqmainwindow.cc  rqmainwindow.h  rqmainwindow.moc.cc  rqobservers.cc  rqobservers.h  rqobservers.moc.cc  rqpackageitem.cc  rqpackageitem.h  rqpackagepopup.cc  rqpackagepopup.h  rqpackagepopup.moc.cc  rqpatternitem.cc  rqpatternitem.h  rqpixmaps.h  rqpmoutputwindow.cc  rqpmoutputwindow.h  rqsummarywindow.cc  rqsummarywindow.h  rqtranslator.h  rquserdialog.cc  rquserdialog.h  window_changes.cc  window_changes.h  (+17 more)
tests/: Makefile.am  meson.build  test_deb822_integration.cc  test_gtkpkglist.cc  test_rpackage.cc  test_rpackagefilter.cc  test_rpackageview.cc
wings/: Makefile.am  rwaboutpanel.cc  rwaboutpanel.h  rwcacheprogress.cc  rwcacheprogress.h  rwconfigwindow.cc  rwconfigwindow.h  rwdummyinstallprogress.cc  rwdummyinstallprogress.h  rwfetchprogress.cc  rwfetchprogress.h  rwfiltereditor.cc  rwfiltereditor.h  rwfiltermanager.cc  rwfiltermanager.h  rwfilterwindow.cc  rwfilterwindow.h  rwinstallprogress.cc  rwinstallprogress.h  rwmainwindow.cc  rwmainwindow.h  rwsourceswindow.cc  rwsourceswindow.h  rwsummarywindow.cc  rwsummarywindow.h  rwuserdialog.cc  rwuserdialog.h  rwwindow.cc  rwwindow.h  synaptic.cc
(+414 files in other folders)
