# synaptic makefile

SUBDIRS = data common gtk tests man pixmaps po help doc

EXTRA_DIST = config.h.in \
	     synaptic.spec synaptic-suse.spec synaptic-redhat.spec \
             intltool-extract.in intltool-merge.in intltool-update.in \
	     README.debtags FAQ \
             TRANSLATORS README.tasks README.supported \
             po/synaptic.pot po-manual/synaptic-manual.pot

