option(
  'scripts',
  type: 'boolean',
  value: false,
  description: 'Enable the extension system',
)

option(
  'dpkg_progress',
  type: 'feature',
  value: 'enabled',
  description: 'Build with support for the dpkg progress bar',
)

option(
  'launchpad_integration',
  type: 'boolean',
  value: false,
  description: 'Build with launchpad-integration support',
)

option(
  'pkg_hold',
  type: 'boolean',
  value: false,
  description: 'Build with the experimental package hold feature',
)

option(
  'gtk_disable_deprecated',
  type: 'boolean',
  value: false,
  description: 'Add GTK_DISABLE_DEPRECATED to GTK-related targets',
)

option(
  'apt_multiarch_support',
  type: 'boolean',
  value: true,
  description: 'Build with apt multiarch support',
)
